--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -25,7 +25,8 @@
                 </button>
             </div>
             {{#error}}
-                <div class="alert alert-danger mt-4 d-flex align-items-center justify-content-center text-center" role="alert">
+                <div class="alert alert-danger mt-4 d-flex align-items-center justify-content-center text-center"
+                     role="alert">
                     <i class="bi bi-exclamation-triangle-fill me-2"></i>
                     {{error}}
                 </div>
@@ -40,5 +41,3 @@
         </form>
     </div>
 </main>
-
-
