--- a/view/perfilUsuarioView.mustache
+++ b/view/perfilUsuarioView.mustache
@@ -1,29 +1,30 @@
 <main class="flex-grow-1 d-flex align-items-center justify-content-center">
-<div class="container my-4">
-    {{#usuario}}
-        <div class="card mx-auto" style="max-width: 800px;">
-            <div class="card-body text-center">
-                <h1 class="card-title">{{nombre_completo}}</h1>
-                <p class="card-text"><strong>Año:</strong> {{anio_nacimiento}}</p>
-                <p class="card-text"><strong>Sexo:</strong> {{sexo}}</p>
-                <p class="card-text"><strong>País:</strong> {{pais}}</p>
-                <p class="card-text"><strong>Ciudad:</strong> {{ciudad}}</p>
-                <img src="{{foto_perfil}}" alt="Foto de perfil" class="img-fluid rounded-circle" style="max-width: 200px;">
-                <div class="mt-4" id="map"></div>
-                <script>
-                    document.addEventListener('DOMContentLoaded', function() {
-                        initMapPerfil("{{pais}}", "{{ciudad}}");
-                    });
-                </script>
+    <div class="container my-4">
+        {{#usuario}}
+            <div class="card mx-auto" style="max-width: 800px;">
+                <div class="card-body text-center">
+                    <h1 class="card-title">{{nombre_completo}}</h1>
+                    <p class="card-text"><strong>Año:</strong> {{anio_nacimiento}}</p>
+                    <p class="card-text"><strong>Sexo:</strong> {{sexo}}</p>
+                    <p class="card-text"><strong>País:</strong> {{pais}}</p>
+                    <p class="card-text"><strong>Ciudad:</strong> {{ciudad}}</p>
+                    <img src="{{foto_perfil}}" alt="Foto de perfil" class="img-fluid rounded-circle"
+                         style="max-width: 200px;">
+                    <div class="mt-4" id="map"></div>
+                    <script>
+                        document.addEventListener('DOMContentLoaded', function () {
+                            initMapPerfil("{{pais}}", "{{ciudad}}");
+                        });
+                    </script>
+                </div>
             </div>
-        </div>
-    {{/usuario}}
-    {{^usuario}}
-        <div class="alert alert-danger text-center" role="alert">
-            ERROR: usuario no encontrado
-        </div>
-    {{/usuario}}
-</div>
+        {{/usuario}}
+        {{^usuario}}
+            <div class="alert alert-danger text-center" role="alert">
+                ERROR: usuario no encontrado
+            </div>
+        {{/usuario}}
+    </div>
 </main>
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 <script src="../public/js/mapaPerfil.js"></script>
